--- a/app/src/main/res/layout/fragment_fragment1.xml
+++ b/app/src/main/res/layout/fragment_fragment1.xml
@@ -13,9 +13,9 @@
         android:layout_width="408dp"
         android:layout_height="119dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="2dp"
-        android:fontFamily="sans-serif-smallcaps"
+        android:fontFamily="monospace"
         android:gravity="center"
         android:text="Emergency"
         android:textColor="@color/black"
@@ -37,7 +37,7 @@
         android:layout_alignParentBottom="true"
 
         android:layout_marginStart="77dp"
-        android:layout_marginTop="424dp"
+        android:layout_marginTop="88dp"
         android:layout_marginEnd="78dp"
         android:backgroundTint="#EF0909"
         android:text="BOOK"
@@ -45,19 +45,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DRegi"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:rippleColor="#D00D0D" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="485dp"
-        android:layout_height="702dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="364dp"
+        android:layout_height="346dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/DRegi"
+        app:layout_constraintVertical_bias="0.101"
         app:srcCompat="@drawable/ambu" />
 
 
